# cie-corpoindustrial

back/: setup.cfg
back/apps/complaints/: admin.py  models.py  serializers.py  urls.py  views.py
back/apps/complaints/utils/: mail.py  pagination.py
back/apps/job/: admin.py  models.py  serializers.py  urls.py  views.py
back/apps/job/utils/: pagination.py  permissions.py
back/apps/products/: admin.py  models.py  serializers.py  urls.py  views.py
back/apps/products/utils/: pagination.py
back/apps/project/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
back/apps/project/utils/: pagination.py
back/apps/user/: admin.py  models.py  serializers.py  urls.py  views.py
back/apps/user/utils/: billing.py  choices.py  img.py  pagination.py
back/core/: settings.py  urls.py
back/templates/email/: activation.html
front/app/: layout.tsx  not-found.tsx  page.tsx
front/app/(protected)/: layout.tsx
front/app/login/: page.tsx
front/components/: ConfirmDialog.tsx  DashboardLayout.tsx  EnterpriseMapExplorer.tsx  ErrorBoundary.tsx  ExportPdfButton.tsx  Header.tsx  OtpForm.tsx  PaginationControls.tsx  RichTextEditor.tsx  SessionLoader.tsx  Sidebar.tsx  theme-provider.tsx
front/context/: AuthContext.tsx
front/hooks/: useAuth.ts  useData.ts  usePermission.ts  useToast.ts
front/lib/: api-client.ts  auth.ts  colors.ts  config.ts  employee-portal.ts  errors.ts  model-choice-labels.ts  rbac.ts  role-home.ts  utils.ts
front/public/: data.xlsx
front/styles/: globals.css
front/types/: api.ts  auth.ts
front/utils/: pagination.ts  report-ui.ts
(+60 files in other folders)
