[metadata]
name = cie
version = 0.0.1
description = A Django project for Cie corpoindustrial
author = Jesus Delgado
author_email = themurder261@gmail.com

[options]
packages = find:
include_package_data = true
python_requires = >=3.12
install_requires =
    # Core Django (compatible con Py 3.12)
    Django==5.2.11

    # Auth / Security
    argon2-cffi==21.3.0
    argon2-cffi-bindings==21.2.0

    # REST
    djangorestframework>=3.15,<3.16
    djangorestframework-simplejwt==5.4.0
    djoser==2.3.0
    djangorestframework-api-response==0.1.0

    # CORS / Env / Redis
    django-cors-headers>=4.9,<5
    django-environ>=0.10,<1
    django-redis>=5.3,<6
    jsonpickle==3.1.0

    # Static / Media
    whitenoise>=6.4,<7
    Pillow>=11.0.0
    django-storages>=1.13,<2

    # Admin UI
    django-unfold==0.71.0

    # Channels (requiere Django >= 4.2)
    channels>=4.1,<5
    channels-redis>=4.2,<5

    # Social auth (versiones modernas, no 4.4.0)
    social-auth-app-django>=5.4,<6
    social-auth-core>=4.8,<5
    PyJWT>=2.10,<3

    # DB
    psycopg2-binary==2.9.11

    # Utils
    python-slugify==8.0.4
    mutagen==1.47.0

    # AWS
    boto3>=1.28,<2
    botocore>=1.31,<2
    twilio
    # BunnyCDN storage (0.1.3 NO existe)
    django-bunny-storage==0.1.2

    # Web3 (si de verdad lo usas en Py 3.12, sube a versión moderna)
    web3>=7,<8
    eth-account>=0.13,<1

[options.packages.find]
exclude =
    myenv
    templates